--- a/README
+++ b/README
@@ -3,12 +3,14 @@
 1. 가상환경이 없다면 생성
 python -m venv .venv
 
-3. 가상환경 활성화
-.venv\Scripts\activate
+2. 가상환경 활성화
+.\.venv\Scripts\activate  (Windows)
+source .venv/bin/activate  (Linux/Mac)
 
-4. 필요한 패키지 자동 설치
+3. 필요한 패키지 자동 설치
 pip install -r requirements.txt
 
-
+4. 한국어 모델 설치
+python -m spacy download ko_core_news_sm
 
 5. 실행
